- EDITOR: added sample sprite to New Games
- EDITOR: replaced QScintilla with a native Qt solution
- EDITOR: added GamePad support
- EDITOR: lgck builder can export sprite meta (proto)
- EDITOR: customize multiselection
- EDITOR: new Overlay type Counter
- EDITOR: added coins, lives and ammo bonuses
- EDITOR: integrating player fire bullet w/ editSprite
- EDITOR: added skill filter
- TOOLS: migrated to qt 5.15
- LUA: display_setFlagXY, display_setFont, display_setSource
- LUA: countdown_set, countdown_start, countdown_stop
- LUA: spriteIdFromUuid
- BUG FIX: onleftClick/onRightClick doesn't work anymore

*** 0.6.0.8

- EDITOR: added portable option to package bundle (windows)
- EDITOR: added export game UI dialog
- EDITOR: added manifests to satisfy windows app cert kit
- EDITOR: new warnings for no player and no goal
- EDITOR: lgck-builder and obl5edit can now be associated with files
- EDITOR: tigher integration between lgck builder and obl5edit
- EDITOR: overlay options exposed in UI
- ENGINE: SFML runtime completed
- TOOLS: migrated gui to qt 5.10.1
- BUG FIX: ScriptWiz displayed incorrectly in Windows
- BUG FIX: uninitialized font causing game to crash (critical) introduced in 0.6.0.6
- BUG FIX: export game wasn't including musics
- BUG FIX: testing empty level was causing a crash
- BUG FIX: background color displays incorrectly in editor
- BUG FIX: level shows completed before starting
- BUG FIX: toolbox disapearing on minimized

*** 0.6.0.7

- EDITOR: builder can export sprites (obl, png)
- EDITOR: runtime integration with the IDE
- EDITOR: improved LGCK builder performance on low-end hardware
- ENGINE: new level event: OnIntroDraw
- ENGINE: snapshot_clear()
- LUA: System Call - ss_notifyAll()
- TOOLS: Updated the gui to run on qt5.7 (replaced qglwidget w/ qopenglwidget)
- TOOLS: easydocs - introducted the concept of alias and improve the ui
- BUG FIX: lua script not always regenerated after an event was modified